@@ -1,11 +1,13 @@
 package io.skai.template.controller;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.kenshoo.openplatform.apimodel.ApiFetchRequest;
 import com.kenshoo.openplatform.apimodel.ApiResponse;
 import com.kenshoo.openplatform.apimodel.QueryFilter;
 import com.kenshoo.openplatform.apimodel.WriteResponseDto;
+import com.kenshoo.openplatform.apimodel.enums.FilterOperator;
 import com.kenshoo.openplatform.apimodel.enums.StatusResponse;
 import com.kenshoo.openplatform.apimodel.errors.FieldError;
 import io.skai.template.dataaccess.entities.Campaign;
@@ -14,12 +16,14 @@ import io.skai.template.dataaccess.entities.QueryFilterException;
 import io.skai.template.services.CampaignService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
+import org.jooq.lambda.Seq;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 @RestController
 @Slf4j
@@ -62,7 +66,7 @@ public class CampaignController {
 
     @GetMapping("/")
     public ApiResponse<Campaign> fetchAllCampaigns(FetchQuery fetchQuery) {
-        final ApiFetchRequest<QueryFilter<String>> apiFetchRequest = new ApiFetchRequest.Builder<QueryFilter<String>>()
+        final ApiFetchRequest<QueryFilter<List<String>>> apiFetchRequest = new ApiFetchRequest.Builder<QueryFilter<List<String>>>()
                 .withFilters(parseFilterQuery(fetchQuery.filters()))
                 .withFields(fetchQuery.fields())
                 .withLimit(fetchQuery.limit())
@@ -88,13 +92,43 @@ public class CampaignController {
                 .build();
     }
 
-    private static List<QueryFilter<String>> parseFilterQuery(String filter) {
+    private static List<QueryFilter<List<String>>> parseFilterQuery(String filter) {
         final ObjectMapper mapper = new ObjectMapper();
         try {
-            final QueryFilter<String>[] queryFilters = mapper.readValue(filter, QueryFilter[].class);
-            return Arrays.asList(queryFilters);
+            return Seq.seq(mapper.readTree(filter).iterator()).map(jsonNode -> {
+                final String fieldNotContainsMessage = "Json not contains field";
+                final String field = Optional.ofNullable(jsonNode.get("field"))
+                        .orElseThrow(
+                                () -> new QueryFilterException(List.of(new FieldError("field", fieldNotContainsMessage)))
+                        ).asText();
+                final String operator = Optional.ofNullable(jsonNode.get("operator"))
+                        .orElseThrow(
+                                () -> new QueryFilterException(List.of(new FieldError("operator", fieldNotContainsMessage)))
+                        ).asText();
+                final List<String> values = Seq.seq(Optional.ofNullable(jsonNode.get("values"))
+                        .orElseThrow(
+                                () -> new QueryFilterException(List.of(new FieldError("values", fieldNotContainsMessage)))
+                        ).iterator()).map(JsonNode::asText).toList();
+
+                validateJsonValues(field, operator, values);
+
+                final FilterOperator filterOperator = FilterOperator.valueOf(operator);
+
+
+                return new QueryFilter<>(field, filterOperator, values);
+            }).toList();
         } catch (JsonProcessingException e) {
             throw new QueryFilterException(List.of(new FieldError("filters", "Cannot parse filters query param. Invalid json pattern")));
+        }
+    }
+
+    private static void validateJsonValues(String field, String operator, List<String> values) {
+        if (StringUtils.isEmpty(field) || StringUtils.isBlank(field)) {
+            throw new QueryFilterException(List.of(new FieldError("field", "Field value can not be empty")));
+        } else if (StringUtils.isEmpty(operator) || StringUtils.isBlank(operator)) {
+            throw new QueryFilterException(List.of(new FieldError("operator", "Operator value can not be empty")));
+        } else if (values.isEmpty()) {
+            throw new QueryFilterException(List.of(new FieldError("values", "Value array can not be empty")));
         }
     }
 
